# face_utils_c

./: CMakeLists.txt  README.md  hello.py  hello2.cpp  libprotobuf.cmake
Authentiface_code/: Constants.h  Main.cpp  READ_ME.txt  test.cpp
Authentiface_code/AppUtils/: App.cpp  App.h  BUILD  FrameAnalyze.cpp  FrameAnalyze.h  ProcessEmbeddings.cpp  ProcessEmbeddings.h  ProcessImages.cpp  ProcessImages.h  TerminalSetup.cpp  TerminalSetup.h  UserInterface.cpp  UserInterface.h  VideoFeed.cpp  VideoFeed.h
Authentiface_code/Data/Settings/: lmkTH.txt  passwordStrengthPercentile.txt
Authentiface_code/DoorUtils/: BUILD  Door.cpp  Door.h  Types.cpp  Types.h
Authentiface_code/DoorUtils/CameraUtils/: BUILD  Camera.cpp  Camera.h  Computer.cpp  Computer.h
Authentiface_code/DoorUtils/LockUtils/: BUILD  DoorLock.cpp  DoorLock.h  GpioLock.cpp  GpioLock.h
Authentiface_code/face_utils/facetools/detection/: BUILD  Core.cpp  Core.h  FaceDetect.cpp  FaceDetect.h  FaceMeshDetect.cpp  FaceMeshDetect.h  Lmk.cpp  Lmk.h
Authentiface_code/face_utils/facetools/motion/: BUILD  LmkModel.cpp  LmkModel.h  Preprocessing.cpp  Preprocessing.h
Authentiface_code/face_utils/facetools/representation/: BUILD  CNNEmbedding.cpp  CNNEmbedding.h
test/: test.cpp  test.h  test_c_bindings.cpp
test2/: CMakeLists.txt  hello.cpp  run_hello.py
